<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp"
                tools:context=".Login">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:ignore="UselessParent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

            <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/agr"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/user_email"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
            />

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
            />

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/checkbox"
                    android:text="@string/keep_me_logged_in"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

            />

            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_text"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rounded"
            />

            <Button
                    android:id="@+id/btn_anonymous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rounded"
            />

            <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_register"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rounded"
            />

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_sign_in"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

            <com.facebook.login.widget.LoginButton
                    android:id="@+id/btn_facebook_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>